--- a/.gitignore
+++ b/.gitignore
@@ -128,4 +128,10 @@ $RECYCLE.BIN/
 # Temporaly Directory
 .aws-sam
 
+# tsbuidinfo
+tsconfig.tsbuildinfo
+
+# transpiled dir
+out
+
 # End of https://www.gitignore.io/api/osx,node,linux,windows
