--- a/src/package.json
+++ b/src/package.json
@@ -4,9 +4,11 @@
   "description": "lambda-batch-sample",
   "main": "app.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "rm -r ../out; tsc --build tsconfig.json && cp ./package.json ../out"
   },
   "devDependencies": {
-    "jest": "^26.0.1"
+    "jest": "^26.0.1",
+    "typescript": "^3.9.3"
   }
 }
