--- a/template.yaml
+++ b/template.yaml
@@ -14,7 +14,7 @@ Resources:
   LambdaBatchSampleFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: src/
+      CodeUri: out/
       Handler: app.lambdaHandler
       Runtime: nodejs12.x
       Policies:
