--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,29 @@
     "build": "rm -r ../out; tsc --build tsconfig.json && cp ./package.json ../out"
   },
   "devDependencies": {
+    "@types/jest": "^25.2.3",
     "jest": "^26.0.1",
+    "ts-jest": "^26.1.0",
     "typescript": "^3.9.3"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "src(.*)$": "<rootDir>/src/$1"
+    },
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "globals": {
+      "ts-jest": {
+        "tsConfig": "tsconfig.json"
+      }
+    },
+    "testMatch": [
+      "**/tests/**/*.test.ts"
+    ]
   }
 }
